src/config/email/snapshots/roadster__config__email__smtp__tests__serialization@case_2.snap
---
source: src/config/email/smtp.rs
expression: email
---
from = 'No Reply <no-reply@example.com>'
reply-to = 'No Reply <no-reply@example.com>'
[smtp.connection]
host = 'smtp.example.com'
username = 'username'
password = 'password'
