src/config/email/snapshots/roadster__config__email__smtp__tests__serialization@case_3.snap
---
source: src/config/email/smtp.rs
expression: email
---
from = 'no-reply@example.com'
[smtp.connection]
host = 'smtp.example.com'
username = 'username'
password = 'password'
