src/config/email/snapshots/roadster__config__email__smtp__tests__serialization@case_4.snap
---
source: src/config/email/smtp.rs
expression: email
---
from = 'No Reply <no-reply@example.com>'
reply-to = 'No Reply <no-reply@example.com>'
[smtp.connection]
uri = 'smtps://username:password@smtp.example.com:425'
