src/config/email/snapshots/roadster__config__email__smtp__tests__serialization@case_5.snap
---
source: src/config/email/smtp.rs
expression: email
---
from = 'no-reply@example.com'
[smtp.connection]
uri = 'smtps://username:password@smtp.example.com:425'
