src/config/email/snapshots/roadster__config__email__smtp__tests__serialization@case_6.snap
---
source: src/config/email/smtp.rs
expression: email
---
from = 'no-reply@example.com'
[smtp.connection]
host = 'smtp.example.com'
port = 465
username = 'username'
password = 'password'
